# smbsh-rs

./: Cargo.toml  README.md
src/: args.rs  main.rs  scan.rs
